Opened 15 years ago
Closed 15 years ago
#6089 closed bug (fixed)
Updated localization patch for Print Server
Reported by: | Karvjorm | Owned by: | laplace |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/print_server | Version: | R1/alpha2 |
Keywords: | Print server localization update | Cc: | Karvjorm |
Blocked By: | Blocking: | ||
Platform: | All |
Description
When I checked one available translation for Print Server, I noticed that "Letter" was translated as a postal term and "Legal" as a juridical one (it is already fixed). I have updated localisations strings with comments.
Attachments (1)
Change History (7)
comment:1 by , 15 years ago
patch: | 0 → 1 |
---|
comment:3 by , 15 years ago
Status: | new → in-progress |
---|
comment:4 by , 15 years ago
follow-up: 6 comment:5 by , 15 years ago
I have now looked at the patch more closely and there are some issues:
1.) I am not sure if scripting "usage" text should be translated.
2.) In ConfigWindow.cpp you changed B_TRANSLATE_MARK to B_TRANSLATE_COMMENT, but B_TRANSLATE_MARK_COMMENT would be correct.
3.) In the "about" text the copyright year and the authors should not be translated. They may change frequently and should not force a translation update.
4.) When you use sprintf(str, ...) str must not be NULL.
There is also no space between sprintf( and str.
Could you provide a new patch that fixes 2-4?
comment:6 by , 15 years ago
Replying to laplace:
I have now looked at the patch more closely and there are some issues:
1.) I am not sure if scripting "usage" text should be translated.
2.) In ConfigWindow.cpp you changed B_TRANSLATE_MARK to B_TRANSLATE_COMMENT, but B_TRANSLATE_MARK_COMMENT would be correct.
3.) In the "about" text the copyright year and the authors should not be translated. They may change frequently and should not force a translation update.
4.) When you use sprintf(str, ...) str must not be NULL.
There is also no space between sprintf( and str.Could you provide a new patch that fixes 2-4?
OK, I'll do it soon.
by , 15 years ago
Attachment: | print_serverLocalizationUpdate.patch added |
---|
An updated print_serverLocalizationUpdate patch
comment:7 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Applied in hrev36964 (slightly modified). Thank you!
Thank you, I will apply the patch soon.