* Applied slightly modifed patch from ticket #6089 by Karvjorm. Thank you. - Added translation comment to paper sizes. - Localized scripting comments. - Improved localization of job info. - Localized parts of about dialog text.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36963 a95241bf-73f2-0310-859d-f6bbb57e9c96